--- a/src/post-layout/exe-boss-version.css
+++ b/src/post-layout/exe-boss-version.css
@@ -15,8 +15,9 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-& > .exe-boss-post-header > .outdated.v1,
-& > .exe-boss-post-header > .outdated.v2 {
+& > .exe-boss-post-header > .outdated.v3,
+& > .exe-boss-post-header > .outdated.v2,
+& > .exe-boss-post-header > .outdated.v1 {
 	display:	none	!important;
 }
 
